--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "chunchun-dan",
   "license": "MIT",
   "devDependencies": {
+    "express": "^4.17.1",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
+    "webpack-dev-middleware": "^5.2.2",
     "webpack-dev-server": "^4.6.0"
   },
   "bugs": {
@@ -71,7 +73,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
     "build": "webpack",
-    "start": "webpack serve --open"
+    "start": "webpack serve --open",
+    "server": "node server.js"
   },
   "keywords": []
 }
